<resources>
    <string name="app_name">TicTacToe</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="how_to_play">How to play</string>
    <string name="credits">Credits</string>
    <string name="history">History</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="save">Save</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="standard_theme">Standard Theme</string>
    <string name="outcome">Outcome</string>
    <string name="date">Date</string>
    <string name="enable_vibration">Enable vibration</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_history">Clear History</string>
    <string-array name="Themes">
        <item>Default Theme</item>
        <item>Dark Theme</item>
    </string-array>
</resources>
