<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/playGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:enabled="true"
            android:onClick="onClick"
            android:text="@string/play"/> */

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:text="@string/settings" />

        <Button
            android:id="@+id/howToPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:text="@string/how_to_play" />

        <Button
            android:id="@+id/credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:text="@string/credits" />

        <Button
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorButton"
            android:onClick="onClick"
            android:text="@string/history" />

    </LinearLayout>


</RelativeLayout>